--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
-  <link rel="stylesheet" media="screen and (min-width: 375px)" href="indexMobile.css">
+  <link rel="stylesheet" href="index.css">
 
-  <link rel="stylesheet" media="screen and (max-width: 1440px)" href="indexDesktop.css">
-
-  
  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap" rel="stylesheet">
